# eyl-lang

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md
prototype/: n-body.pel
src/: CMakeLists.txt  arithmetic.cxx  main.c  main.cxx
src/arithmetic/: Makefile  main.cpp
src/elf/: CMakeLists.txt  main.cxx
src/gui/: CMakeLists.txt  main.cxx  xdg_shell.c  xdg_shell.cxx
tests/: exit.ll  linux-hello-world.epl
